# copilot-scrum-guided

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-developer.md  documentation-agent.md  research-agent.md  security-reviewer.md  test-engineer.md
.claude/hooks/: ntfy-notify.sh  session-reminder.sh
.claude/skills/agent-memory/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/github-issues/: SKILL.md
.claude/skills/notify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: architect.agent.md  board-keeper.agent.md  challenger.agent.md  ci-fixer.agent.md  code-developer.agent.md  copilot-customization-builder.agent.md  documentation-agent.agent.md  release-agent.agent.md  research-agent.agent.md  security-reviewer.agent.md  test-engineer.agent.md
.github/prompts/: code-review.prompt.md  create-pr.prompt.md  direction-gate.prompt.md  issue-triage.prompt.md  orchestrate-bugfix.prompt.md  orchestrate-feature.prompt.md  refine.prompt.md  sprint-planning.prompt.md  sprint-retro.prompt.md  sprint-review.prompt.md  sprint-start.prompt.md  subagent-dispatch.prompt.md  tdd-workflow.prompt.md  web-research.prompt.md  writing-plans.prompt.md
.github/workflows/: ci.yml  release.yml.disabled
docs/architecture/: ADR.md
docs/constitution/: PHILOSOPHY.md  PROCESS.md
docs/sprints/: velocity.md
scripts/: copilot-notify.sh
(+28 files in other folders)
